--- a/templates/ios/Example/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
+++ b/templates/ios/Example/PROJECT.xcodeproj/xcshareddata/xcschemes/PROJECT.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F589195388D20070C39A"
-               BuildableName = "PROJECT_Example.app"
-               BlueprintName = "PROJECT_Example"
-               ReferencedContainer = "container:PROJECT.xcodeproj">
+               BuildableName = "OfferWowSDK_Example.app"
+               BlueprintName = "OfferWowSDK_Example"
+               ReferencedContainer = "container:OfferWowSDK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6003F5AD195388D20070C39A"
-               BuildableName = "PROJECT_Tests.xctest"
-               BlueprintName = "PROJECT_Tests"
-               ReferencedContainer = "container:PROJECT.xcodeproj">
+               BuildableName = "OfferWowSDK_Tests.xctest"
+               BlueprintName = "OfferWowSDK_Tests"
+               ReferencedContainer = "container:OfferWowSDK.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -43,9 +43,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "PROJECT_Example.app"
-            BlueprintName = "PROJECT_Example"
-            ReferencedContainer = "container:PROJECT.xcodeproj">
+            BuildableName = "OfferWowSDK_Example.app"
+            BlueprintName = "OfferWowSDK_Example"
+            ReferencedContainer = "container:OfferWowSDK.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -66,9 +66,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "PROJECT_Example.app"
-            BlueprintName = "PROJECT_Example"
-            ReferencedContainer = "container:PROJECT.xcodeproj">
+            BuildableName = "OfferWowSDK_Example.app"
+            BlueprintName = "OfferWowSDK_Example"
+            ReferencedContainer = "container:OfferWowSDK.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -85,9 +85,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6003F589195388D20070C39A"
-            BuildableName = "PROJECT_Example.app"
-            BlueprintName = "PROJECT_Example"
-            ReferencedContainer = "container:PROJECT.xcodeproj">
+            BuildableName = "OfferWowSDK_Example.app"
+            BlueprintName = "OfferWowSDK_Example"
+            ReferencedContainer = "container:OfferWowSDK.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
